# macfmt

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: release.yml  zizmor.yml
src/: main.rs
